@@ -11,6 +11,9 @@ HLStats ChangeLog
 *) New: Player profile has new facebook field /hls_set facebook url
 *) New: Player profile has new jabber field /hls_set jabber url
 *) New: Player profile has new steamprofile field /hls_set steamprofile url
+*) New: Steam profile page lookup via SteamID. BCmath support (PHP) is needed.
+	http://www.php.net/manual/en/book.bc.php
+	Will check if enabled
 *) Changed: Constant INCLUDE_PATH removed.
 *) Changed: hlstats.php file renamed to index.php
 				scripturl option has been removed.
